# bun-sys

./: .envrc  Cargo.toml  build.rs  flake.nix
.github/workflows/: build-libs.yml
include/: bun_embed.h
patches/: 001-add-embed-zig.patch  002-wire-embed-import.patch  003-wire-zig-static-lib.patch  004-remove-wno-character-conversion.patch
patches/1.3.3/: 001-add-embed-zig.patch
patches/1.3.9/: 001-add-embed-zig.patch  003-wire-zig-static-lib.patch
src/: lib.rs
